--- a/src/components/iletisim/Iletisim.css
+++ b/src/components/iletisim/Iletisim.css
@@ -12,7 +12,7 @@
     font-size: large;
     border-radius: 5px;
     background-color: #DCDCDC;
-    color:#e30387;
+    color:#E59026;
     margin-bottom: 2rem !important;
 }
 
