--- a/src/components/klinik/Klinik.css
+++ b/src/components/klinik/Klinik.css
@@ -33,7 +33,7 @@
  }
  .owlCarouselImageKlinik:hover{
      opacity: .5;
-    border: 3px groove #e30387;
+    border: 3px groove #E59026;
  }
  
 
@@ -57,9 +57,9 @@
 }
 .whatsapp_temp:hover{
    background-color:#FFFBEB;
-   border-right: 1px solid #e30387;
-   border-left: 1px solid #e30387;
-   border-bottom: 1px solid #e30387;
+   border-right: 1px solid #E59026;
+   border-left: 1px solid #E59026;
+   border-bottom: 1px solid #E59026;
 }
 
  /* for desktop */
@@ -119,7 +119,7 @@
 
 /* The animation code */
 @keyframes whatsapp_float_mesaj {
-   from {color: #e30387;}
+   from {color: #E59026;}
    to {color: #31CE80}
 }
 
