--- a/src/components/slider/owlcarousel/Owl.css
+++ b/src/components/slider/owlcarousel/Owl.css
@@ -31,7 +31,7 @@
 }
 .owlCarouselImage:hover{
 	opacity: .5;
-   border: 3px groove #e30387;
+   border: 3px groove #E59026;
    border-radius: 30%;
 }
 
