--- a/src/components/taslakhizmet/Taslak.css
+++ b/src/components/taslakhizmet/Taslak.css
@@ -14,7 +14,7 @@
   }
   .image:hover{
     
-    border:2px outset #e30387 !important;
+    border:2px outset #E59026 !important;
     
   }
 
@@ -66,7 +66,7 @@
     font-size:x-large !important;
 
     color: white;
-    background-color: #e30387; /* #e30387; */
+    background-color: #E59026; /* #E59026; */
     opacity: 0.7;
     width: 100% !important;
     height: 5rem !important;
@@ -113,7 +113,7 @@
     bottom:-60px;
     transition: 0.6s;
     transition-property: bottom;
-    border-top: 1px solid #e30387; 
+    border-top: 1px solid #E59026; 
     border-radius: 5px 5px 0px 0px;
   }
   .image:hover .more{
@@ -139,7 +139,7 @@
 /* The animation code */
 @keyframes read-more{
   from {color: #25D366;}
-  to {color: #e30387;}
+  to {color: #E59026;}
 }
 
    
