--- a/src/components/title/Title.css
+++ b/src/components/title/Title.css
@@ -12,7 +12,7 @@
 }
 .page_header_home:hover{
     text-decoration: none !important;
-    color: #e30387!important;
+    color: #E59026!important;
     
     
 }
